--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-primer
-title: [6DOF Lab]
-description: [6DOF Lab specializes in building creative technology experiences.]
+title: 6DOF Lab
+description: 6DOF Lab specializes in building creative technology experiences.
